--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.17.5",
+    "browser-sync": "2.18.6",
+    "gulp-cli": "1.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-postcss": "^6.2.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.1.2",
-    "postcss-cssnext": "^2.8.0",
-    "postcss-import": "^8.2.0",
-    "postcss-url": "^5.1.2"
+    "gulp-babel": "6.1.2",
+    "gulp-concat": "2.6.1",
+    "gulp-cssnano": "2.1.2",
+    "gulp-lintspaces": "0.5.0",
+    "gulp-postcss": "6.3.0",
+    "postcss-cssnext": "2.9.0",
+    "postcss-import": "9.1.0",
+    "postcss-url": "5.1.2"
   }
 }
