--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-htmlmin": "3.0.0",
     "gulp-lintspaces": "0.5.0",
     "gulp-postcss": "6.3.0",
+    "gulp-vulcanize": "6.1.0",
     "postcss-cssnext": "2.9.0",
     "postcss-import": "9.1.0",
     "postcss-url": "5.1.2"
